# Lucy

./: .gitignore  .gitmodules  Dockerfile  README.md  db_setup.sql  docker-compose.yml  nginx.conf  pyproject.toml
Lucy/: requirements.txt
Lucy/dependency_stubs/stub_llm_backend/: __init__.py  main.py
Lucy/lucy/: README.md  __init__.py  schema.py  settings.py
Lucy/lucy/agent/: agent.py  prompt_engine.py
Lucy/lucy/agent/tool_engine/: __init__.py  os_tools.py  tool_engine.py
Lucy/lucy/backends/: inference_backend_base.py  memory_backend_base.py
Lucy/lucy/stimuli/: stimuli_base.py
Lucy/requirements/: development.requirements.txt  production.requirements.txt
Lucy/tests/: test_prompt_engine.py
LucyMixtralTogetherAIBackend/lucy_mixtral_together_ai_backend/: main.py
LucyMixtralTogetherAIBackend/tests/: test_generates.py
LucyPostgresBackend/lucy_postgres_backend/: __init__.py  main.py
LucyPostgresBackend/lucy_postgres_backend/models/: base.py  database.py  mixins.py
Sid/sid/: README.md  main.py  schema.py  settings.py
Sid/sid/agent/: README.md  agent.py
Sid/sid/backends/: inference_backend_base.py  memory_backend_base.py
Sid/sid/freud_ego/: README.md
Sid/sid/message_queues/: cli_queue.py
Sid/sid/observability/: README.md
Sid/sid/stimuli/: stimuli_base.py
Sid67/sid67/: __init__.py  schema.py  settings.py
Sid67/sid67/agent/: agent.py  prompt_engine.py
Sid67/sid67/backends/: inference_backend_base.py  memory_backend_base.py
Sid67/sid67/stimuli/: stimuli_base.py
SidMixtralTogetherAIBackend/: requirements.txt
SidMixtralTogetherAIBackend/sid_mixtral_together_ai_backend/: enums.py  main.py
SidMixtralTogetherAIBackend/tests/: test_generates.py
SidPostgresBackend/sid_postgres_backend/: __init__.py  enums.py  exceptions.py  main.py
SidPostgresBackend/sid_postgres_backend/models/: base.py  database.py  mixins.py
SidPostgresBackend/sid_scoped_memory_base/: __init__.py  schema.py
SidTogetherAIBackend/sid_together_ai_backend/: main.py
dockerfiles/: lucy.Dockerfile  sid_mixtraltogetherai.Dockerfile
fastapi_test/: Dockerfile  docker-compose.yml  requirements.txt
fastapi_test/app/: app.py  main.py
src/: __init__.py  requirements.txt  sid.py
(+20 files in other folders)
